Split plugin core and jira7